force-app/main/default/objects/CallRecordingLink__c/CallRecordingLink__c.object-meta.xml
<CustomObject>
    <label>Call Recording</label>
    <nameField>
        <displayFormat>Link-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Recordings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>